@@ -319,20 +319,6 @@ AP_DECLARE(int) ap_satisfies(request_rec *r);
  */
 AP_DECLARE(const apr_array_header_t *) ap_requires(request_rec *r);    
 
-#if defined(WIN32)
-/* 
- * CGI Script stuff for Win32...
- */
-typedef enum { eFileTypeUNKNOWN, eFileTypeBIN, eFileTypeEXE16, eFileTypeEXE32, 
-               eFileTypeSCRIPT } file_type_e;
-typedef enum { INTERPRETER_SOURCE_UNSET, INTERPRETER_SOURCE_REGISTRY_STRICT, 
-               INTERPRETER_SOURCE_REGISTRY, INTERPRETER_SOURCE_SHEBANG 
-             } interpreter_source_e;
-AP_DECLARE(file_type_e) ap_get_win32_interpreter(const request_rec *, 
-                                                 char **interpreter,
-                                                 char **arguments);
-#endif
-
 #ifdef CORE_PRIVATE
 
 /*
@@ -457,11 +443,6 @@ typedef struct {
     /* Access control */
     apr_array_header_t *sec_file;
     regex_t *r;
-
-#ifdef WIN32
-    /* Where to find interpreter to run scripts */
-    interpreter_source_e script_interpreter_source;
-#endif    
 
     const char *mime_type;       /* forced with ForceType  */
     const char *handler;         /* forced with SetHandler */
